--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -15,8 +15,8 @@
             <div id='controls'>
                 <div id='buttons'>
                         <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>
-                        <input id='pin' type='image' height='60px' width='auto' src='/assets/yellow-pin.png'>
-                        <input id='draw' type='image' height='60px' width='auto' src='/assets/yellow-scribble.png'>
+                        <input id='pin' type='image' height='60px' width='auto' src='/assets/red-pin.png'>
+                        <input id='draw' type='image' height='60px' width='auto' src='/assets/red-scribble.png'>
                         <input id='undo' type='image' height='60px' width='auto' src='/assets/undo-arrow.png'>
                         <input id='clear' type='image' height='60px' width='auto' src='/assets/eraser.png'>
                 </div>
