--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -21,9 +21,18 @@
                         <input id='clear' type='image' height='60px' width='auto' src='/assets/eraser.png'>
                 </div>
             </div>
-            <canvas id='canvas'></canvas>
-            <div class='loading hidden'><p>sending photo</p></div>
-        </div>
+            <canvas id='canvas'>
+            </canvas>
+            <div class='hidden' id='loading'>
+                <p id='message'>sending photo</p>
+            </div>
+            <div class="checkmark" id='checkmark'>
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 161.2 161.2" enable-background="new 0 0 161.2 161.2" xml:space="preserve">
+                    <circle id='circle' class="path-animate" fill="none" stroke="#009245" stroke-width="4" stroke-miterlimit="10" cx="80.6" cy="80.6" r="62.1"/>
+                    <polyline id='polyline' class="path-animate" fill="none" stroke="#009245" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="113,52.8 74.1,108.4 48.2,86.4 "/>
+                </svg>
+            </div>
         <svg id="camera-upload" data-name="camera-upload" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.92 132.6">
           <defs>
               <style>.cls-1,.cls-2{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:4px;}.cls-1{stroke-linecap:round;}.cls-3{font-size:12px;font-family:Open Sans;}</style>
