--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -5,49 +5,63 @@
         <link rel="stylesheet" type="text/css" href="/stylesheets/ev.css" />
     </head>
     <body>
-        <div id='selection-container'>
-                <div id='selection'>
+       
+        <div id='container'>
+            
+            <div id='selection-container'>
+
+
+                <div id='role-selection'>
                     <button id='ev'>EV</button>
                     <button id='iv'>IV</button>
                 </div>
-            </div>
-        <div id='container'>
-            <div id='controls'>
-                <div id='buttons'>
-                        <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>
-                        <input id='pin' type='image' height='60px' width='auto' src='/assets/red-pin.png'>
-                        <input id='draw' type='image' height='60px' width='auto' src='/assets/red-scribble.png'>
-                        <input id='undo' type='image' height='60px' width='auto' src='/assets/undo-arrow.png'>
-                        <input id='clear' type='image' height='60px' width='auto' src='/assets/eraser.png'>
+                <div id='camera' class='hidden'>
+                    <svg id="camera-upload" data-name="camera-upload" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.92 132.6" onclick="cameraClick();">
+              <defs>
+                  <style>.cls-1,.cls-2{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:4px;}.cls-1{stroke-linecap:round;}.cls-3{font-size:12px;font-family:Open Sans;}</style>
+              </defs>
+              <title>camera-upload</title>
+              <path d="M63.22,76.72a13.6,13.6,0,1,1,13.6-13.6A13.61,13.61,0,0,1,63.22,76.72Zm0-23.1a9.6,9.6,0,1,0,9.6,9.6A9.6,9.6,0,0,0,63.22,53.62Z" transform="translate(-5.16 -3.31)"/>
+              <path d="M94,92.12H32.42a9.77,9.77,0,0,1-9.7-9.7V47.72a9.77,9.77,0,0,1,9.7-9.7h9.2a1.33,1.33,0,0,0,1.1-.8l2.4-7.2a5.51,5.51,0,0,1,4.9-3.6h26.2a5.26,5.26,0,0,1,4.9,3.6l2.4,7.2a1.33,1.33,0,0,0,1.1.8h9.2a9.77,9.77,0,0,1,9.7,9.7v34.7A9.42,9.42,0,0,1,94,92.12ZM32.42,42a5.76,5.76,0,0,0-5.7,5.7v34.7a5.76,5.76,0,0,0,5.7,5.7H94a5.76,5.76,0,0,0,5.7-5.7V47.72A5.76,5.76,0,0,0,94,42h-9.2a5.26,5.26,0,0,1-4.9-3.6l-2.4-7.2a1.33,1.33,0,0,0-1.1-.8H50.12a1.33,1.33,0,0,0-1.1.8l-2.4,7.3a5.51,5.51,0,0,1-4.9,3.6h-9.3V42Z" transform="translate(-5.16 -3.31)"/>
+              <path d="M63.22,84.42a21.3,21.3,0,1,1,21.2-21.3A21.32,21.32,0,0,1,63.22,84.42Zm0-38.5a17.25,17.25,0,1,0,17.3,17.2A17.31,17.31,0,0,0,63.22,45.92Z" transform="translate(-5.16 -3.31)"/>
+              <path d="M91.32,47.72a2.7,2.7,0,1,1-2.7,2.7,2.69,2.69,0,0,1,2.7-2.7m0-3a5.7,5.7,0,1,0,5.7,5.7,5.76,5.76,0,0,0-5.7-5.7h0Z" transform="translate(-5.16 -3.31)"/>
+              <path class="cls-1" d="M91.32,53.12" transform="translate(-5.16 -3.31)"/>
+              <circle class="cls-2" cx="57.96" cy="57.96" r="55.96"/>
+              <text class="cls-3" transform="translate(26.41 129.35)">Take photo</text>
+                    </svg>
+                    <input type='file' id='img-file' accept='image/*' capture='camera'>
+                    <label id='label' for='img-file' for='new'></label>
                 </div>
+
+
+                <div id='loading-container'>
+                    <div id='spinner'>
+<!--                        <p id='message'>sending photo</p>-->
+                    </div>
+                    <div id='checkmark' class='hidden'>
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 161.2 161.2" enable-background="new 0 0 161.2 161.2" xml:space="preserve">
+                            <circle id='circle' class="path-animate" fill="none" stroke="#009245" stroke-width="4" stroke-miterlimit="10" cx="80.6" cy="80.6" r="62.1"/>
+                            <polyline id='polyline' class="path-animate" fill="none" stroke="#009245" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="113,52.8 74.1,108.4 48.2,86.4 "/>
+    </svg>
+                    </div>
+                </div>
+
+
             </div>
-            <canvas id='canvas'>
-            </canvas>
-            <div class='hidden' id='loading'>
-                <p id='message'>sending photo</p>
+            
+            <div id='canvas-container'>
+                <div id='controls'>
+                    <div id='buttons'>
+                            <input id='photo' type='image' height='100px' width='auto' src='/assets/camera-upload.png'>
+                            <input id='pin' type='image' height='60px' width='auto' src='/assets/red-pin.png'>
+                            <input id='draw' type='image' height='60px' width='auto' src='/assets/red-scribble.png'>
+                            <input id='undo' type='image' height='60px' width='auto' src='/assets/undo-arrow.png'>
+                            <input id='clear' type='image' height='60px' width='auto' src='/assets/eraser.png'>
+                    </div>
+                </div>
+                <canvas id='canvas'></canvas>
             </div>
-            <div class="checkmark" id='checkmark'>
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-             viewBox="0 0 161.2 161.2" enable-background="new 0 0 161.2 161.2" xml:space="preserve">
-                    <circle id='circle' class="path-animate" fill="none" stroke="#009245" stroke-width="4" stroke-miterlimit="10" cx="80.6" cy="80.6" r="62.1"/>
-                    <polyline id='polyline' class="path-animate" fill="none" stroke="#009245" stroke-width="6" stroke-linecap="round" stroke-miterlimit="10" points="113,52.8 74.1,108.4 48.2,86.4 "/>
-                </svg>
-            </div>
-        <svg id="camera-upload" data-name="camera-upload" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115.92 132.6">
-          <defs>
-              <style>.cls-1,.cls-2{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:4px;}.cls-1{stroke-linecap:round;}.cls-3{font-size:12px;font-family:Open Sans;}</style>
-          </defs>
-          <title>camera-upload</title>
-          <path d="M63.22,76.72a13.6,13.6,0,1,1,13.6-13.6A13.61,13.61,0,0,1,63.22,76.72Zm0-23.1a9.6,9.6,0,1,0,9.6,9.6A9.6,9.6,0,0,0,63.22,53.62Z" transform="translate(-5.16 -3.31)"/>
-          <path d="M94,92.12H32.42a9.77,9.77,0,0,1-9.7-9.7V47.72a9.77,9.77,0,0,1,9.7-9.7h9.2a1.33,1.33,0,0,0,1.1-.8l2.4-7.2a5.51,5.51,0,0,1,4.9-3.6h26.2a5.26,5.26,0,0,1,4.9,3.6l2.4,7.2a1.33,1.33,0,0,0,1.1.8h9.2a9.77,9.77,0,0,1,9.7,9.7v34.7A9.42,9.42,0,0,1,94,92.12ZM32.42,42a5.76,5.76,0,0,0-5.7,5.7v34.7a5.76,5.76,0,0,0,5.7,5.7H94a5.76,5.76,0,0,0,5.7-5.7V47.72A5.76,5.76,0,0,0,94,42h-9.2a5.26,5.26,0,0,1-4.9-3.6l-2.4-7.2a1.33,1.33,0,0,0-1.1-.8H50.12a1.33,1.33,0,0,0-1.1.8l-2.4,7.3a5.51,5.51,0,0,1-4.9,3.6h-9.3V42Z" transform="translate(-5.16 -3.31)"/>
-          <path d="M63.22,84.42a21.3,21.3,0,1,1,21.2-21.3A21.32,21.32,0,0,1,63.22,84.42Zm0-38.5a17.25,17.25,0,1,0,17.3,17.2A17.31,17.31,0,0,0,63.22,45.92Z" transform="translate(-5.16 -3.31)"/>
-          <path d="M91.32,47.72a2.7,2.7,0,1,1-2.7,2.7,2.69,2.69,0,0,1,2.7-2.7m0-3a5.7,5.7,0,1,0,5.7,5.7,5.76,5.76,0,0,0-5.7-5.7h0Z" transform="translate(-5.16 -3.31)"/>
-          <path class="cls-1" d="M91.32,53.12" transform="translate(-5.16 -3.31)"/>
-          <circle class="cls-2" cx="57.96" cy="57.96" r="55.96"/>
-          <text class="cls-3" transform="translate(26.41 129.35)">Take photo</text>
-        </svg>
-        <input type='file' id='img-file' accept='image/*' capture='camera'>
-        <label id='label' for='img-file' for='new'></label>
+        </div>
     </body>
     <script src="/js/ev.js"></script>
 </html>
