--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -32,9 +32,10 @@
                     <div id='buttons'>
                         <img id='photo' height='60px' width='auto' src='/assets/camera.svg'>
                         <div id='creative'>
+                            <hr id='slider'>
                             <img id='draw' height='45px' width='auto' src='/assets/red-scribble.svg'>
                             <img id='pin' height='45px' width='auto' src='/assets/red-pin.svg'>
-                            <img id='clear' height='45px' width='auto' src='/assets/eraser.svg'>
+                            <img id='erase' height='45px' width='auto' src='/assets/eraser.svg'>
                         </div>
                         <div id='state-control'>
                             <div id='arrows'>
