ev and iv icons

--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -8,8 +8,8 @@
         <div id='container'>
             <div id='selection-container'>
                 <div id='role-selection'>
-                    <button id='ev'>EV</button>
-                    <button id='iv'>IV</button>
+                    <img id='ev' src='/assets/EV.svg'>
+                    <img id='iv' src='/assets/IV.svg'>
                 </div>
                 <div id='camera' class='hidden'>
                     <img id="camera-upload" onclick="cameraClick();" src='/assets/take-photo.svg'>
