--- a/public/stylesheets/ev.css
+++ b/public/stylesheets/ev.css
@@ -174,8 +174,9 @@ body {
 }
 
 #role-selection {
-    width: 100px;
-    height: 120px;
+    width: 800px;
+    height: 800px;
+    text-align: center;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -185,10 +186,11 @@ body {
     z-index: 3;
 }
 
-#role-selection > button {
-    width: 100%;
-    height: 40%;
-    margin: 5px auto;
+#role-selection > img {
+    display: inline-block;
+    width: 40%;
+    height: 100%;
+    margin: 0 10px;
 }
 
 /* camera button styling only */
