--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -3,6 +3,7 @@
     <head>
         <% include ../partials/header.ejs %>
         <link rel="stylesheet" type="text/css" href="/stylesheets/ev.css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     </head>
     <body>
         <div id='container'>
