--- a/public/stylesheets/ev.css
+++ b/public/stylesheets/ev.css
@@ -43,6 +43,7 @@ stylesheet
 }
 
 .canvas-landscape {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
     background-size: contain;
     background-repeat: no-repeat;
     display: inline-block;
@@ -50,6 +51,7 @@ stylesheet
 }
 
 .canvas-portrait {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
     background-size: contain;
     background-repeat: no-repeat;
     display: inline-block;
