--- a/views/pages/ev.ejs
+++ b/views/pages/ev.ejs
@@ -3,6 +3,7 @@
     <head>
         <% include ../partials/header.ejs %>
         <link rel="stylesheet" type="text/css" href="/stylesheets/ev.css" />
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"> 
     </head>
     <body>
         <div id='container'>
